--- a/app/src/main/res/layout/activity_board_list.xml
+++ b/app/src/main/res/layout/activity_board_list.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".BoardListActivity">
 
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
